[package]
name = "battlemon_near_json_rpc_client_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs" }
near-jsonrpc-primitives = "0.14.0"
near-primitives = "0.14.0"
near-crypto = "0.14.0"
serde = "1.0.137"

[dev-dependencies]
serde_json = "1.0.80"
tokio = { version = "1.18.0", features = ["macros"] }