[package]
name = "battlemon_near_json_rpc_client_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
near-jsonrpc-client = "0.3.0"
near-jsonrpc-primitives = "0.12.0"
near-primitives = "0.12.0"
near-crypto = "0.12.0"
serde = "1.0.137"

[dev-dependencies]
serde_json = "1.0.80"
tokio = { version = "1.18.0", features = ["macros"] }