[package]
name = "battlemon_near_json_rpc_client_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
near-jsonrpc-client = "0.4.0-beta.0"
near-jsonrpc-primitives = "0.14.0"
near-primitives = "0.14.0"
near-crypto = "0.14.0"
serde = "1.0.140"
anyhow = "1.0.58"

[dev-dependencies]
serde_json = "1.0.80"
tokio = { version = "1.18.0", features = ["macros"] }